chore: Open API 3 설정 추가

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -15,4 +15,9 @@ spring:
         dialect: org.hibernate.dialect.MySQLDialect
 springdoc:
   swagger-ui:
-    path: /swagger
+    path: /api-docs
+  api-docs:
+    groups:
+      enabled: true
+  cache:
+    disabled: true
