--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -16,6 +16,9 @@ spring:
 springdoc:
   swagger-ui:
     path: /api-docs
+    urls:
+      - url: /openapi/api.yaml
+        name: Player API
   api-docs:
     groups:
       enabled: true
